# dt4dds-benchmark

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
demo/: basic_pipeline.py  varying_pipeline.py
dt4dds_benchmark/: __init__.py  inputs.py
dt4dds_benchmark/analysis/: __init__.py  clustering.py  datafit.py  dataset.py  fileio.py  plotting.py
dt4dds_benchmark/clustering/: __init__.py  baseclustering.py  basicset.py  cdhit.py  clover.py  lsh.py  mmseqs2.py  noclustering.py  starcode.py
dt4dds_benchmark/codecs/: __init__.py  aeon.py  basecodec.py  dbgps.py  fountain.py  goldman.py  hedges.py  ldpc.py  modulation.py  rs.py  yinyang.py
dt4dds_benchmark/pipelines/: __init__.py  basepipeline.py  clustering.py  decoding.py  full.py  manager.py  noencode.py  variator.py
dt4dds_benchmark/tools/: __init__.py  file_compare.py  logs.py  standardize.py  stats.py  step.py  subprocess.py
dt4dds_benchmark/workflows/: __init__.py  baseworkflow.py  bestcase.py  downsampling.py  errorgenerator.py  errorgenerator_motifs.py  noworkflow.py  pool_bestcase.py  pool_worstcase.py  serialdilution.py  serialpcr.py  worstcase.py
input_files/random/: 17kB  19kB  5kB
tests/: conftest.py  test_codecs.py
